Release 0.2-0:
  * Added rsvd() method.
  * Added rcond() method.
  * Added "^" method.
  * Added sum() method.
  * Improved memory usage and communication pattern of crossprod().

Release 0.1-0:
  * Added expand() and collapse().
  * Added multiplication methods.
  * Added svd method.
  * Added QR method.
  * Added scale() method.
  * Added PCA method.
  * Added matrix norm method.
  * Added some basic arithmetic methods.
  * Added cov() and cor() methods.
  * Added a print method.
  * Added lm (coefficient getter) method.
  * Added random shaq constructors.
  * Added gradient descent-based lm, logistic, and poisson regression fitters.