@@ -10,6 +10,7 @@ export(Data)
 export(collapse)
 export(expand)
 export(is.shaq)
+export(km)
 export(lm_coefs)
 export(logistic.fit)
 export(ncol.local)
