@@ -1,0 +1,25 @@
+suppressMessages(library(kazaam))
+set.seed(1234)
+
+m.local = 10
+n = 2
+
+k = comm.size()
+data = matrix(rnorm(m.local*n, mean=10*comm.rank()), m.local, n)
+x = shaq(data)
+
+cl = km(x, k=k)
+
+test = allreduce(sum(diff(Data(cl$labels))))
+comm.print(all.equal(test, 0.0))
+
+# y = collapse(x)
+# if (comm.rank() == 0){
+#   set.seed(1234)
+#   km = kmeans(y, centers=k, algorithm="Lloyd")
+#   print(km$centers)
+#   print(km$cluster)
+#   print(km$iter)
+# }
+
+finalize()
